--- a/.cvsignore
+++ b/.cvsignore
@@ -1,5 +1,6 @@
-PEAR-1.7.2.tgz
-Archive_Tar-1.3.2.tgz
+Archive_Tar-1.3.3.tgz
 Console_Getopt-1.2.3.tgz
+PEAR-1.8.1.tgz
 Structures_Graph-1.0.2.tgz
 XML_RPC-1.5.1.tgz
+XML_Util-1.2.1.tgz
