--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ PEAR-1.9.1.tgz
 Structures_Graph-1.0.3.tgz
 XML_RPC-1.5.4.tgz
 XML_Util-1.2.1.tgz
+/Archive_Tar-1.3.7.tgz
+/Console_Getopt-1.2.3.tgz
+/PEAR-1.9.1.tgz
+/Structures_Graph-1.0.4.tgz
+/XML_RPC-1.5.4.tgz
+/XML_Util-1.2.1.tgz
