--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-*~
+clog
+*spec~
 /Archive_Tar-1.3.7.tgz
 /Structures_Graph-1.0.4.tgz
 /XML_RPC-1.5.4.tgz
@@ -10,3 +11,4 @@
 /Archive_Tar-1.3.8.tgz
 /Archive_Tar-1.3.9.tgz
 /Archive_Tar-1.3.10.tgz
+/Archive_Tar-1.3.11.tgz
