update Structures_Graph to 1.1.0 and Archive_Tar to 1.3.14

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ clog
 /Archive_Tar-1.3.12.tgz
 /Archive_Tar-1.3.13.tgz
 /Console_Getopt-1.4.0.tgz
+/Archive_Tar-1.3.14.tgz
+/Structures_Graph-1.1.0.tgz
