--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ clog
 /Archive_Tar-1.3.15.tgz
 /Archive_Tar-1.3.16.tgz
 /Archive_Tar-1.4.0.tgz
+/Console_Getopt-1.4.1.tgz
+/Structures_Graph-1.1.1.tgz
