- update PEAR to 1.10.0dev2 - drop all patches, merged upstream - drop man pages from sources - add PEAR_Manpages upstream package

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ clog
 /Archive_Tar-1.4.0.tgz
 /Console_Getopt-1.4.1.tgz
 /Structures_Graph-1.1.1.tgz
+/PEAR-1.10.0dev2.tgz
+/PEAR_Manpages-1.10.0dev2.tgz
